# VLA_LAB

./: .gitignore
ros2_ws/src/piper_description/: CMakeLists.txt  package.xml
ros2_ws/src/piper_description/launch/: display_piper.launch.py
ros2_ws/src/piper_description/rviz/: piper_ros2_display.rviz
ros2_ws/src/piper_description/urdf/: piper_description.xacro  piper_description_sim.xacro  piper_no_gripper_description.xacro  piper_no_gripper_description_gazebo.xacro
ros2_ws/src/piper_gazebo/: CMakeLists.txt  package.xml
ros2_ws/src/piper_gazebo/launch/: empty_world.launch.py  spawn_piper.launch.py  spawn_piper_vla_lab.launch.py  spawn_vla_lab.launch.py
ros2_ws/src/piper_gazebo/worlds/: empty_piper_world.sdf
ros2_ws/src/vla_lab_description/: CMakeLists.txt  package.xml
ros2_ws/src/vla_lab_description/launch/: display_vla_lab.launch.py
ros2_ws/src/vla_lab_description/meshes/: vla_lab_base_link.STL
ros2_ws/src/vla_lab_description/urdf/: vla_lab_description.csv  vla_lab_description.urdf
