<?xml version="1.0"?>
<package format="3">
  <name>piper_description</name>
  <version>1.0.0</version>
  <description>URDF, meshes, and RViz assets for the AgileX PiPER robotic arm.</description>

  <maintainer email="mohamed@example.com">Mohamed</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>
