<?xml version="1.0"?>
<package format="3">
  <name>vla_lab_description</name>
  <version>1.0.0</version>
  <description>URDF, meshes, and launch files for the VLA Lab table, shape sorter, camera mount, and fixed RealSense camera body.</description>

  <maintainer email="mohamed@example.com">Mohamed Abdelfatah</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>
